# Bloat-Buster

./: CMakeLists.txt  README.md
docs/: uml.txt
src/core/: pointer_arithmetic.c  prefix_tree.c  string_lib.c
src/core/include/: pointer_arithmetic.h  prefix_tree.h  string_lib.h
src/file/: file_graph.c  file_graph.cpp
src/file/include/: file_graph.h
src/main/: main.c  main.cpp
src/main/include/: constants_macros.h
